Added images back to all pages and routed headers

--- a/pages/booknow.html
+++ b/pages/booknow.html
@@ -443,14 +443,16 @@ textarea {
 </head>
 
 <body>
+    <!--Navbar start-->
     <div id="fixedheader" class="row header">
-        <div class="col-3 navbox"><a href="home.html" class="logo">Aurora Medical</a></div>
+        <div class="col-3 navbox"><a href="home.html" class="logo">Aurora</a><a href="home.html"
+                class="logo logopt2">Medical</a></div>
         <div class="col-3"></div>
-        <div class="col navbox "><a href="#" class="navbtn hover-underline-animation">Products</a></div>
-        <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">FAQ</a></div>
-        <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">Contact Us</a></div>
-        <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">News</a></div>
-        <div class="col navbox"><a href="#"><button href="#" class="bookbtn">Book Now</button></a></div>
+        <div class="col navbox "><a href="products.html" class="navbtn hover-underline-animation">Products</a></div>
+        <div class="col navbox"><a href="FAQ.html" class="navbtn hover-underline-animation">FAQ</a></div>
+        <div class="col navbox"><a href="contact-us.html" class="navbtn hover-underline-animation">Contact Us</a></div>
+        <div class="col navbox"><a href="blog.html" class="navbtn hover-underline-animation">News</a></div>
+        <div class="col navbox"><a href="booknow.html"><button href="#" class="bookbtn">Book Now</button></a></div>
 
     </div>
 
@@ -458,13 +460,14 @@ textarea {
     <div class="row header">
         <div class="col-3 navbox"><a href="home.html" class="logo">Aurora Medical</a></div>
         <div class="col-2"></div>
-        <div class="col navbox "><a href="#" class="navbtn hover-underline-animation">Products</a></div>
-        <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">FAQ</a></div>
-        <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">Contact Us</a></div>
-        <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">News</a></div>
-        <div class="col navbox"><a href="#"><button href="#" class="bookbtn">Book Now</button></a></div>
+        <div class="col navbox "><a href="products.html" class="navbtn hover-underline-animation">Products</a></div>
+        <div class="col navbox"><a href="FAQ.html" class="navbtn hover-underline-animation">FAQ</a></div>
+        <div class="col navbox"><a href="contact-us.html" class="navbtn hover-underline-animation">Contact Us</a></div>
+        <div class="col navbox"><a href="blog.html" class="navbtn hover-underline-animation">News</a></div>
+        <div class="col navbox"><a href="booknow.html"><button href="#" class="bookbtn">Book Now</button></a></div>
         <div class="col"></div>
     </div>
+    <!--Navbar ends here-->
 
     <div class="preface">
         <h2> Booking</h2>
