--- a/pages/cart.html
+++ b/pages/cart.html
@@ -396,31 +396,31 @@
 
 <body ">
 
-   <!--Navbar start-->
-   <div id="fixedheader" class="row header">
-    <div class="col-3 navbox"><a href="home.html" class="logo">Aurora</a><a href="home.html"
-            class="logo logopt2">Medical</a></div>
-    <div class="col-3"></div>
-    <div class="col navbox "><a href="#" class="navbtn hover-underline-animation">Products</a></div>
-    <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">FAQ</a></div>
-    <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">Contact Us</a></div>
-    <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">News</a></div>
-    <div class="col navbox"><a href="#"><button href="#" class="bookbtn">Book Now</button></a></div>
+       <!--Navbar start-->
+       <div id="fixedheader" class="row header">
+        <div class="col-3 navbox"><a href="home.html" class="logo">Aurora</a><a href="home.html"
+                class="logo logopt2">Medical</a></div>
+        <div class="col-3"></div>
+        <div class="col navbox "><a href="products.html" class="navbtn hover-underline-animation">Products</a></div>
+        <div class="col navbox"><a href="FAQ.html" class="navbtn hover-underline-animation">FAQ</a></div>
+        <div class="col navbox"><a href="contact-us.html" class="navbtn hover-underline-animation">Contact Us</a></div>
+        <div class="col navbox"><a href="blog.html" class="navbtn hover-underline-animation">News</a></div>
+        <div class="col navbox"><a href="booknow.html"><button href="#" class="bookbtn">Book Now</button></a></div>
 
-</div>
+    </div>
 
-<!--This is a duplicate header to create the spacing between the top of the screen and the next element, leave it as part of the header-->
-<div class="row header">
-    <div class="col-3 navbox"><a href="home.html" class="logo">Aurora Medical</a></div>
-    <div class="col-2"></div>
-    <div class="col navbox "><a href="#" class="navbtn hover-underline-animation">Products</a></div>
-    <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">FAQ</a></div>
-    <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">Contact Us</a></div>
-    <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">News</a></div>
-    <div class="col navbox"><a href="#"><button href="#" class="bookbtn">Book Now</button></a></div>
-    <div class="col"></div>
-</div>
-<!--Navbar ends here-->
+    <!--This is a duplicate header to create the spacing between the top of the screen and the next element, leave it as part of the header-->
+    <div class="row header">
+        <div class="col-3 navbox"><a href="home.html" class="logo">Aurora Medical</a></div>
+        <div class="col-2"></div>
+        <div class="col navbox "><a href="products.html" class="navbtn hover-underline-animation">Products</a></div>
+        <div class="col navbox"><a href="FAQ.html" class="navbtn hover-underline-animation">FAQ</a></div>
+        <div class="col navbox"><a href="contact-us.html" class="navbtn hover-underline-animation">Contact Us</a></div>
+        <div class="col navbox"><a href="blog.html" class="navbtn hover-underline-animation">News</a></div>
+        <div class="col navbox"><a href="booknow.html"><button href="#" class="bookbtn">Book Now</button></a></div>
+        <div class="col"></div>
+    </div>
+    <!--Navbar ends here-->
 
 
     <div class="container text-center">
@@ -430,7 +430,7 @@
                 <h2>Checkout Information</h2>
             </div>
             <div class="col-md-8">
-                <img  src="image/arrow.png" onclick="history.back()" style="height: 1vw; cursor: pointer;"class="back"></img>
+                <img  src="../assets/images/arrow.png" onclick="history.back()" style="height: 1vw; cursor: pointer;"class="back"></img>
                 <div class="checkout-border">
                     <div class="col-md-8">
                         <br>
@@ -502,7 +502,7 @@
                 <div class="checkout-border2">
                     <h2>Order Summary</h2>
                     <hr>
-                    <img src="image/pcr.jpg" alt="pcr" class="responsive">
+                    <img src="../assets/images/pcr.jpg" alt="pcr" class="responsive">
                     <h4 id="covidtestOrder"></h4>
                     <a>Qty: 1</a>
                     <br>
