--- a/pages/igm.html
+++ b/pages/igm.html
@@ -248,7 +248,7 @@
 
 
         .hero {
-            background-image: url("image/bg.png");
+            background-image: url("../assets/images/bg.png");
             background-repeat: no-repeat;
             background-size: cover;
 
@@ -465,7 +465,7 @@
         }
         .hero-banner {
     min-height: 60vh;
-    background-image: url('image/bg.png');
+    background-image: url('../assets/images/bg.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -484,11 +484,11 @@
     <div class="col-3 navbox"><a href="home.html" class="logo">Aurora</a><a href="home.html"
             class="logo logopt2">Medical</a></div>
     <div class="col-3"></div>
-    <div class="col navbox "><a href="#" class="navbtn hover-underline-animation">Products</a></div>
-    <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">FAQ</a></div>
-    <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">Contact Us</a></div>
-    <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">News</a></div>
-    <div class="col navbox"><a href="#"><button href="#" class="bookbtn">Book Now</button></a></div>
+    <div class="col navbox "><a href="products.html" class="navbtn hover-underline-animation">Products</a></div>
+    <div class="col navbox"><a href="FAQ.html" class="navbtn hover-underline-animation">FAQ</a></div>
+    <div class="col navbox"><a href="contact-us.html" class="navbtn hover-underline-animation">Contact Us</a></div>
+    <div class="col navbox"><a href="blog.html" class="navbtn hover-underline-animation">News</a></div>
+    <div class="col navbox"><a href="booknow.html"><button href="#" class="bookbtn">Book Now</button></a></div>
 
 </div>
 
@@ -496,11 +496,11 @@
 <div class="row header">
     <div class="col-3 navbox"><a href="home.html" class="logo">Aurora Medical</a></div>
     <div class="col-2"></div>
-    <div class="col navbox "><a href="#" class="navbtn hover-underline-animation">Products</a></div>
-    <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">FAQ</a></div>
-    <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">Contact Us</a></div>
-    <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">News</a></div>
-    <div class="col navbox"><a href="#"><button href="#" class="bookbtn">Book Now</button></a></div>
+    <div class="col navbox "><a href="products.html" class="navbtn hover-underline-animation">Products</a></div>
+    <div class="col navbox"><a href="FAQ.html" class="navbtn hover-underline-animation">FAQ</a></div>
+    <div class="col navbox"><a href="contact-us.html" class="navbtn hover-underline-animation">Contact Us</a></div>
+    <div class="col navbox"><a href="blog.html" class="navbtn hover-underline-animation">News</a></div>
+    <div class="col navbox"><a href="booknow.html"><button href="#" class="bookbtn">Book Now</button></a></div>
     <div class="col"></div>
 </div>
 <!--Navbar ends here-->
@@ -537,7 +537,7 @@
                 </a>
             </div>
             <div class="col-sm-4" style="display:flex; align-items: center;">
-                <img src="image/serology.png"
+                <img src="../assets/images/serology.png"
                     style="object-fit: contain; height: 20vw; width: auto; vertical-align: center;">
             </div>
         </div>
