--- a/pages/pcr.html
+++ b/pages/pcr.html
@@ -459,9 +459,12 @@
             font-size: 1.5rem;
             font-weight: 700;
         }
+        h4 {
+            font-size: 3rem;
+        }
         .hero-banner {
     min-height: 60vh;
-    background-image: url('image/bg.png');
+    background-image: url('../assets/images/pcr.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -479,30 +482,30 @@ h1 {
 
 <body>
     <!--Navbar start-->
-<div id="fixedheader" class="row header">
-    <div class="col-3 navbox"><a href="home.html" class="logo">Aurora</a><a href="home.html"
-            class="logo logopt2">Medical</a></div>
-    <div class="col-3"></div>
-    <div class="col navbox "><a href="#" class="navbtn hover-underline-animation">Products</a></div>
-    <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">FAQ</a></div>
-    <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">Contact Us</a></div>
-    <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">News</a></div>
-    <div class="col navbox"><a href="#"><button href="#" class="bookbtn">Book Now</button></a></div>
+    <div id="fixedheader" class="row header">
+        <div class="col-3 navbox"><a href="home.html" class="logo">Aurora</a><a href="home.html"
+                class="logo logopt2">Medical</a></div>
+        <div class="col-3"></div>
+        <div class="col navbox "><a href="products.html" class="navbtn hover-underline-animation">Products</a></div>
+        <div class="col navbox"><a href="FAQ.html" class="navbtn hover-underline-animation">FAQ</a></div>
+        <div class="col navbox"><a href="contact-us.html" class="navbtn hover-underline-animation">Contact Us</a></div>
+        <div class="col navbox"><a href="blog.html" class="navbtn hover-underline-animation">News</a></div>
+        <div class="col navbox"><a href="booknow.html"><button href="#" class="bookbtn">Book Now</button></a></div>
 
-</div>
+    </div>
 
-<!--This is a duplicate header to create the spacing between the top of the screen and the next element, leave it as part of the header-->
-<div class="row header">
-    <div class="col-3 navbox"><a href="home.html" class="logo">Aurora Medical</a></div>
-    <div class="col-2"></div>
-    <div class="col navbox "><a href="#" class="navbtn hover-underline-animation">Products</a></div>
-    <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">FAQ</a></div>
-    <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">Contact Us</a></div>
-    <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">News</a></div>
-    <div class="col navbox"><a href="#"><button href="#" class="bookbtn">Book Now</button></a></div>
-    <div class="col"></div>
-</div>
-<!--Navbar ends here-->
+    <!--This is a duplicate header to create the spacing between the top of the screen and the next element, leave it as part of the header-->
+    <div class="row header">
+        <div class="col-3 navbox"><a href="home.html" class="logo">Aurora Medical</a></div>
+        <div class="col-2"></div>
+        <div class="col navbox "><a href="products.html" class="navbtn hover-underline-animation">Products</a></div>
+        <div class="col navbox"><a href="FAQ.html" class="navbtn hover-underline-animation">FAQ</a></div>
+        <div class="col navbox"><a href="contact-us.html" class="navbtn hover-underline-animation">Contact Us</a></div>
+        <div class="col navbox"><a href="blog.html" class="navbtn hover-underline-animation">News</a></div>
+        <div class="col navbox"><a href="booknow.html"><button href="#" class="bookbtn">Book Now</button></a></div>
+        <div class="col"></div>
+    </div>
+    <!--Navbar ends here-->
 <section class="hero-banner container-fluid d-flex justify-content-center align-items-center">
     <div class="text-center">
         <h1 style="text-transform: uppercase; font-size: 5rem; line-height: 5rem;">
@@ -516,7 +519,7 @@ h1 {
     <div class="box1">
         <div class="row">
             <div class="col-sm-8">
-                <h2 style="text-align: left">What is a Mobile Departure Swab Test?</h2>
+                <h2 style="text-align: left">What is a PCR Swab Test?</h2>
                 <hr style="width: 50px; color: #333333; opacity: 1; border-top: 1.5px solid; margin: 1.5rem 0;" class="mx-auto">
                 <a style="text-align: justify;">
                     The nose swab PCR test for COVID-19 is an accurate and reliable test for diagnosing COVID-19. A
@@ -532,12 +535,12 @@ h1 {
                 </a>
             </div>
             <div class="col-sm-4" style="display:flex; align-items: center;">
-                <img src="image/pcrtest.png"
+                <img src="../assets/images/pcrtest.png"
                     style="object-fit: contain; height: 20vw; width: auto; vertical-align: center;">
             </div>
         </div>
         <div style=" align-items: center; justify-content: center; display: flex; margin-top: 5%;">
-            <a href="booknow.html"><button href="#" class="bookbtn herobtn">Book Now</button></a>
+            <a href="booknow.html"><button href="booknow.html" class="bookbtn herobtn">Book Now</button></a>
         </div>
     </div>
     <div class="box2">
@@ -560,7 +563,7 @@ h1 {
                     <div class="row" style="height: 33%;">
                         <hr>
                         <h4>S$69</h4>
-                        <a href="booknow.html"><button href="#" class="bookbtn herobtn">Book Now</button></a>
+                        <a href="booknow.html"><button href="booknow.html" class="bookbtn herobtn">Book Now</button></a>
                     </div>
                 </div>
             </div>
@@ -576,7 +579,7 @@ h1 {
                     <div class="row" style="height: 33%;">
                         <hr>
                         <h4>S$250</h4>
-                        <a href="booknow.html"><button href="#" class="bookbtn herobtn">Book Now</button></a>
+                        <a href="booknow.html"><button href="booknow.html" class="bookbtn herobtn">Book Now</button></a>
                     </div>
                 </div>
             </div>
