--- a/pages/sart.html
+++ b/pages/sart.html
@@ -475,7 +475,7 @@
         }
         .hero-banner {
     min-height: 60vh;
-    background-image: url('image/sart.jpg');
+    background-image: url('../assets/images/sart.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -491,31 +491,31 @@ h1 {
 </head>
 
 <body>
-   <!--Navbar start-->
-<div id="fixedheader" class="row header">
-    <div class="col-3 navbox"><a href="home.html" class="logo">Aurora</a><a href="home.html"
-            class="logo logopt2">Medical</a></div>
-    <div class="col-3"></div>
-    <div class="col navbox "><a href="#" class="navbtn hover-underline-animation">Products</a></div>
-    <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">FAQ</a></div>
-    <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">Contact Us</a></div>
-    <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">News</a></div>
-    <div class="col navbox"><a href="#"><button href="#" class="bookbtn">Book Now</button></a></div>
+     <!--Navbar start-->
+     <div id="fixedheader" class="row header">
+        <div class="col-3 navbox"><a href="home.html" class="logo">Aurora</a><a href="home.html"
+                class="logo logopt2">Medical</a></div>
+        <div class="col-3"></div>
+        <div class="col navbox "><a href="products.html" class="navbtn hover-underline-animation">Products</a></div>
+        <div class="col navbox"><a href="FAQ.html" class="navbtn hover-underline-animation">FAQ</a></div>
+        <div class="col navbox"><a href="contact-us.html" class="navbtn hover-underline-animation">Contact Us</a></div>
+        <div class="col navbox"><a href="blog.html" class="navbtn hover-underline-animation">News</a></div>
+        <div class="col navbox"><a href="booknow.html"><button href="#" class="bookbtn">Book Now</button></a></div>
 
-</div>
+    </div>
 
-<!--This is a duplicate header to create the spacing between the top of the screen and the next element, leave it as part of the header-->
-<div class="row header">
-    <div class="col-3 navbox"><a href="home.html" class="logo">Aurora Medical</a></div>
-    <div class="col-2"></div>
-    <div class="col navbox "><a href="#" class="navbtn hover-underline-animation">Products</a></div>
-    <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">FAQ</a></div>
-    <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">Contact Us</a></div>
-    <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">News</a></div>
-    <div class="col navbox"><a href="#"><button href="#" class="bookbtn">Book Now</button></a></div>
-    <div class="col"></div>
-</div>
-<!--Navbar ends here-->
+    <!--This is a duplicate header to create the spacing between the top of the screen and the next element, leave it as part of the header-->
+    <div class="row header">
+        <div class="col-3 navbox"><a href="home.html" class="logo">Aurora Medical</a></div>
+        <div class="col-2"></div>
+        <div class="col navbox "><a href="products.html" class="navbtn hover-underline-animation">Products</a></div>
+        <div class="col navbox"><a href="FAQ.html" class="navbtn hover-underline-animation">FAQ</a></div>
+        <div class="col navbox"><a href="contact-us.html" class="navbtn hover-underline-animation">Contact Us</a></div>
+        <div class="col navbox"><a href="blog.html" class="navbtn hover-underline-animation">News</a></div>
+        <div class="col navbox"><a href="booknow.html"><button href="#" class="bookbtn">Book Now</button></a></div>
+        <div class="col"></div>
+    </div>
+    <!--Navbar ends here-->
 <section class="hero-banner container-fluid d-flex justify-content-center align-items-center">
     <div class="text-center">
         <h1 style="text-transform: uppercase; font-size: 5rem; line-height: 5rem;">
@@ -552,7 +552,7 @@ h1 {
         <div style="align-items: center; justify-content: center; display: flex; margin-top: 5%;">
             <br>
             <br>
-            <a href="booknow.html"><button href="#" class="bookbtn herobtn">Book Now</button></a>
+            <a href="booknow.html"><button href="booknow.html" class="bookbtn herobtn">Book Now</button></a>
         </div>
     </div>
     <div class="box2">
@@ -561,7 +561,7 @@ h1 {
     <hr style="width: 50px; color: #333333; opacity: 1; border-top: 1.5px solid; margin: 1.5rem 0;" class="mx-auto">
         <div class="row">
             <div class="col whoa">
-                <img src="image/plane up.png" class="who">
+                <img src="../assets/images/plane up.png up.png" class="who">
                 <br>
                 <a><strong>Pre-Departure Testing</strong>
                 <br>
@@ -569,7 +569,7 @@ h1 {
                 hours; Check your destination country's test requirements.</a>
             </div>
             <div class="col whoa">
-                <img src="image/plane down.png" class="who">
+                <img src="../assets/images/plane down.png down.png" class="who">
                 <br>
                 <a><strong>Inbound Travellers</strong>
                     <br>
@@ -597,7 +597,7 @@ h1 {
                     </div>
                 </div>
                 <div class="col-6">    
-                    <img src="image/booknow.png" style="height: 25vw; width: auto;">
+                    <img src="../assets/images/booknow.png" style="height: 25vw; width: auto;">
                 </div>
             </div>
             <div class="row steps">
@@ -609,7 +609,7 @@ h1 {
                     </div>
                 </div>
                 <div class="col-6">
-                    <img src="image/iphone.png" style="height: 25vw; width: auto;">
+                    <img src="../assets/images/iphone.png" style="height: 25vw; width: auto;">
                 </div>
             </div>
             <div class="row steps">
@@ -622,7 +622,7 @@ h1 {
                         </div>
                     </div>
                     <div class="col-6">
-                        <img src="image/sartkit.png" style="height: 25vw; width: auto;">
+                        <img src="../assets/images/sartkit.png" style="height: 25vw; width: auto;">
                     </div>
             </div>
             <div class="row steps">
@@ -633,12 +633,12 @@ h1 {
                     </div>
                 </div>
                 <div class="col-6">
-                    <img src="image/24hours.png" style="height: 20vw; width: auto; margin-top: 2%;">
+                    <img src="../assets/images/24hours.png" style="height: 20vw; width: auto; margin-top: 2%;">
                 </div>
             </div>
             <div class="row steps2">
                 <h3>Book a supervised ART now at:</h3>
-                <a href="booknow.html"><button href="#" class="bookbtn herobtn" style="margin-top: 5%;">Book Now</button></a>
+                <a href="booknow.html"><button href="booknow.html" class="bookbtn herobtn" style="margin-top: 5%;">Book Now</button></a>
             </div>  
         </div>
 
