--- a/pages/mobile.html
+++ b/pages/mobile.html
@@ -459,13 +459,16 @@
         }
         .hero-banner {
     min-height: 60vh;
-    background-image: url('image/bg.png');
+    background-image: url('../assets/images/bg.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     background-blend-mode: darken;
     background-color: rgba(0, 0, 0, 0.47);
     padding: 5%;
+}
+h4 {
+    font-size: 3rem;
 }
 h1 {
     font-family: 'Playfair Display', serif;
@@ -529,7 +532,7 @@ h1 {
                 </a>
             </div>
             <div class="col-sm-4" style="display:flex; align-items: center;">
-                <img src="image/mobile.jpg"
+                <img src="../assets/images/mobile.jpg"
                     style="object-fit: contain; height: auto; width: 150%; vertical-align: center;">
             </div>
         </div>
