Redirected Logo to ../index.html instead of home.html

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -396,9 +396,9 @@
 
 <body ">
 
-       <!--Navbar start-->
-       <div id="fixedheader" class="row header">
-        <div class="col-3 navbox"><a href="home.html" class="logo">Aurora</a><a href="home.html"
+         <!--Navbar start-->
+    <div id="fixedheader" class="row header">
+        <div class="col-3 navbox"><a href="../index.html" class="logo">Aurora</a><a href="home.html"
                 class="logo logopt2">Medical</a></div>
         <div class="col-3"></div>
         <div class="col navbox "><a href="products.html" class="navbtn hover-underline-animation">Products</a></div>
