Added content to replace lorem ipsum in blog

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="./blog.css">
+    <link rel="stylesheet" href="../css/blog.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.core.min.css">
@@ -116,32 +116,32 @@
     <div class="news_box_group">
         <div class="col-9 area_major">
             <div class="col-9 text_area_major d-flex flex-column justify-content-center">
-                <p class="title" style="margin:0;">test_major</p>
-                <p class="content" style="font-size: 1.5rem;">Nemo enim ipsam voluptatem quia voluptas sit asp</p>
+                <p class="title" style="margin:0;">How does a PCR Test Work?</p>
+                <p class="content" style="font-size: 1.5rem;">Dr Tan Wei Ming from Aurora Medical is here to answer all of your questions on modern Covid-19 tests, vaccinations and talk about some common misconceptions you may have about the Covid-19 Vaccine</p>
             </div>
         </div>
         <div class="col-3 area_sub">
             <div class="col-3 text_area_sub">
-                <p class="title" style="margin:0;">text_area_sub</p>
-                <p class="content">Nemo enim ipsam voluptatem quia voluptas sit asp</p>
+                <p class="title" style="margin:0;">Should you take your 5th dose?</p>
+                <p class="content">Dr Ang shares his thoughts, and why being cautious of Covid-19 might be more important than you think</p>
             </div>
         </div>
         <div class="col-3 area_sub">
             <div class="col-3 text_area_sub">
-                <p class="title" style="margin:0;">text_area_sub</p>
-                <p class="content">Nemo enim ipsam voluptatem quia voluptas sit asp</p>
+                <p class="title" style="margin:0;">China tightens border-control</p>
+                <p class="content">On the 15th of October, China made the move to tighten their border restrictions. Effective 20th October, now travellers going into Mainland China are expected to...</p>
             </div>
         </div>
         <div class="col-3 area_sub">
             <div class="col-3 text_area_sub">
-                <p class="title" style="margin:0;">text_area_sub</p>
-                <p class="content">Nemo enim ipsam voluptatem quia voluptas sit asp</p>
+                <p class="title" style="margin:0;">XBB Strain. Mighty or Mini?</p>
+                <p class="content">The new Covid-19 strain XBB is scaring people around the word, leading to rampant fearmongering and a buildup of stress for many workers who now are being forced to return to their workplaces...</p>
             </div>
         </div>
         <div class="col-3 area_sub">
             <div class="col-3 text_area_sub">
-                <p class="title" style="margin:0;">text_area_sub</p>
-                <p class="content">Nemo enim ipsam voluptatem quia voluptas sit asp</p>
+                <p class="title" style="margin:0;">Other news about Covid-19 restrictions in Southeast Asia</p>
+                <p class="content">Along with Singapore, many other popular travel destinations are starting to ease up on their border restrictions, but a few particular countries have chosen to tighten their border control in view of the most recent covid strain...</p>
             </div>
         </div>
     </div>
