[Brandon] Updated index.html

--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -38,7 +38,7 @@
         </div>
     </nav>
 
-    <!-- space holder -->
+    <!-- navbar space holder -->
     <nav class="container-fluid d-flex justify-content-between align-items-center p-3 flex-wrap">
         <div style="color: white">
             <h1 style="font-size: 2rem; font-weight: 400;">
@@ -216,7 +216,7 @@
     </section>
 
     <!-- contact info -->
-    <section class="contact-info container-fluid">
+    <section class="contact-info container-fluid" id="contact-info">
         <div class="row">
             <div class="col-lg-4 col-md-12" id="map" style="height: 40rem"></div>
             <div class="col-lg-4 col-md-6 d-flex flex-column" style="background-color: #112F24; padding: 2rem 3rem; height: 40rem;">
